--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<!--
 <form action="/users" method="post" accept-charset="UTF-8">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
@@ -12,3 +13,17 @@
 
   <input type="submit" value="Submit">
 </form>
+-->
+
+<%= form_with(url: "/users", method:"post") do %>
+    <%= label_tag(:username, "Username: ")%>
+    <%= text_field_tag(:username) %>
+
+    <%= label_tag(:email, "Email: ")%>
+    <%= text_field_tag(:email) %>
+
+    <%= label_tag(:password, "Password: ")%>
+    <%= password_field_tag(:password) %>
+
+    <%= submit_tag("Submit") %>
+<% end %>
