--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(url: "/users", method:"patch") do %>
+<%= form_with(url: "/users/#{@user[:id]}", method:"patch") do %>
     <%= label_tag(:username, "Username: ")%>
     <%= text_field_tag(:username) %>
 
